# rift

./: Cargo.toml  README.md  config.toml
src/: config.rs  engine.rs  main.rs  player.rs  server.rs
src/command/: mod.rs  proxy.rs  version.rs
src/packet/: handshake.rs  login.rs  mod.rs
src/protocol/: login.rs  mod.rs  slp.rs
src/util/: color.rs  hash.rs  mod.rs
