[package]
name = "rift"
version = "0.1.0"
authors = ["Alex <me@a9e.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
async-trait = "0.1.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.6"
image-base64 = "0.1"